--- a/public/style.css
+++ b/public/style.css
@@ -9,10 +9,34 @@ body {
 
 /* Header and Footer */
 header, footer {
-    background-color: #004d40; /* Dark Teal */
     color: #fff;
     text-align: center;
     padding: 1rem;
+}
+
+header {
+    background: linear-gradient(rgba(0, 77, 64, 0.8), rgba(0, 77, 64, 0.8)), url('/georgia/georgiastatecapital.tiff');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+footer {
+    background-color: #004d40; /* Dark Teal */
+}
+
+header .header-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+header img.state-seal {
+    height: 60px;
+    margin-right: 20px;
 }
 
 header h1 {
@@ -145,6 +169,34 @@ button:hover {
     height: 350px; /* Adjusted height */
     width: 100%;
     border-radius: 8px;
+}
+
+.custom-div-icon {
+    position: relative;
+    width: 30px;
+    height: 42px;
+}
+
+.marker-pin-red {
+    width: 30px;
+    height: 42px;
+    background-image: url('https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png');
+    background-size: contain;
+    position: absolute;
+}
+
+.marker-badge {
+    position: absolute;
+    top: 2px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: white;
+    color: red;
+    border-radius: 50%;
+    padding: 2px 5px;
+    font-size: 12px;
+    font-weight: bold;
+    border: 1px solid red;
 }
 
 #system-details, #operator-details {
